--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FinafricaMaxBot</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    /* body {
+      background-image: url("./assets/img/orion.png");
+      background-size: cover;
+      background-position: center;
+    } */
+  </style>
 </head>
 <body>
   <app-root></app-root>
